--- a/CodeCoverage/appsettings.json
+++ b/CodeCoverage/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CodeCoverage;Trusted_Connection=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Port=1;Database=myDataBase;User Id=postgres;Password=postgres;"
+    }
 }
